# loom

./: README.md  codecov.yml
.devcontainer/: devcontainer.json
.github/: README.md  dependabot.yml
.github/workflows/: ci.yml
demo/: welcome.blox
loom/: FEATURE_ANALYSIS.md  PLUGIN_SYSTEM.md  PROJECT_ANALYSIS.md  README.md  SYSTEM_ARCHITECTURE.md  UI_UX_ROADMAP.md  analysis_options.yaml  l10n.yaml  pubspec.yaml
loom/android/app/: build.gradle
loom/coverage/: lcov.info
loom/docs/: PLUGIN_SYSTEM.md  SYSTEM_ARCHITECTURE.md  feature_explorer.md
loom/integration_test/: simple_test.dart
loom/ios/Runner/: Info.plist
loom/ios/Runner.xcodeproj/: project.pbxproj
loom/lib/: main.dart
loom/lib/app/: app.dart
loom/lib/common/: index.dart
loom/lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_ja.arb  app_ko.arb  app_zh.arb
loom/linux/: CMakeLists.txt  my_application.cc
loom/linux/flutter/: CMakeLists.txt  generated_plugins.cmake
loom/macos/Flutter/: GeneratedPluginRegistrant.swift
loom/macos/Runner.xcodeproj/: project.pbxproj
loom/rust/: Cargo.toml
loom/rust/src/: frb_generated.rs  lib.rs
loom/rust/src/api/: blox_api.rs  mod.rs
loom/rust/src/blox/: ast.rs  comprehensive_test.rs  decoder.rs  encoder.rs  error.rs  mod.rs  parser.rs  simple_test.rs  spec.md
loom/rust_builder/: pubspec.yaml
loom/rust_builder/android/: build.gradle  settings.gradle
loom/test/: editor_test.dart  simple_editor_test.dart
loom/web/: index.html  manifest.json
loom/windows/: CMakeLists.txt
loom/windows/runner/: Runner.rc  (+1 more)
scripts/: dev_check.sh
(+503 files in other folders)
